--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Review Semantic Search</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link data-trunk rel="rust" data-wasm-opt="2"/>
+    <link data-trunk rel="rust" data-wasm-opt="2" data-target-name="review_search_frontend"/>
 </head>
 <body>
     <script>
